--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <url>http://www.nuxeo.com/en/products</url>
   <organization>
-    <name>Nuxeo SAS</name>
+    <name>Nuxeo SA</name>
     <url>http://www.nuxeo.com</url>
   </organization>
   <licenses>
