NXP-7823: always commit the transaction before sending the response (so we may have to buffer the response first)

--- a/nuxeo-platform-wi-backend/pom.xml
+++ b/nuxeo-platform-wi-backend/pom.xml
@@ -45,6 +45,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-login-digest</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-web-common</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
