--- a/nuxeo-platform-imaging/nuxeo-platform-imaging-convert/pom.xml
+++ b/nuxeo-platform-imaging/nuxeo-platform-imaging-convert/pom.xml
@@ -40,9 +40,10 @@
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-convert-api</artifactId>
     </dependency>
+
     <dependency>
-      <groupId>javax.mail</groupId>
-      <artifactId>mail</artifactId>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-mimetype-core</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -53,6 +54,11 @@
     <dependency>
       <groupId>javax.transaction</groupId>
       <artifactId>jta</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
