--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   </modules>
 
   <properties>
-    <chemistry.opencmis.version>0.6.0-SNAPSHOT</chemistry.opencmis.version>
+    <chemistry.opencmis.version>0.6.0-r1201655</chemistry.opencmis.version>
   </properties>
 
   <dependencyManagement>
