NXP-7789: work in progress on using operations as suggestion handlers)

--- a/nuxeo-platform-suggestbox-core/pom.xml
+++ b/nuxeo-platform-suggestbox-core/pom.xml
@@ -81,6 +81,10 @@
       <artifactId>nuxeo-platform-directory-types-contrib</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.automation</groupId>
+      <artifactId>nuxeo-automation-core</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
