--- a/nuxeo-platform-login-digest/pom.xml
+++ b/nuxeo-platform-login-digest/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-login-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF12</version>
   </parent>
 
   <artifactId>nuxeo-platform-login-digest</artifactId>
