--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>nuxeo-features-parent</artifactId>
     <groupId>org.nuxeo.ecm.platform</groupId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF12</version>
   </parent>
 
   <artifactId>nuxeo-platform-shibboleth-groups-web</artifactId>
