--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
@@ -10,7 +10,7 @@ color.minor.strong=#ffdf2e
 neutral.lighter=#f6f6f6
 neutral.light=#f1f2f3
 neutral.medium=#eeeff0
-neutral.strong=#c7c7c7
+neutral.strong=#dfe0e0
 neutral.stronger=#8b8b8b
 
 button=#e7e7e7
