--- a/nuxeo-marketplace-dam/src/main/resources/package.xml
+++ b/nuxeo-marketplace-dam/src/main/resources/package.xml
@@ -1,21 +1,27 @@
-<package type="addon" name="nuxeo-dm" version="@VERSION@">
+<package type="addon" name="nuxeo-dam" version="@VERSION@">
   <title>Nuxeo DAM</title>
   <description>
     <p>Nuxeo DAM is a robust, extensible, Digital Asset Management solution
       available as Open Source Software (OSS) that helps marketing and brand
       managers catalog, process, store, retrieve, and distribute rich media
-      content, including images, audio, and video.</p>
+      content, including images, audio, and video.
+    </p>
     <p>Streamlining these tasks enables creative users to focus on ideas and
-      design by freeing them from resource-intensive content control tasks.</p>
+      design by freeing them from resource-intensive content control tasks.
+    </p>
     <p>Nuxeo DAM, a state-of-the-art application built on a new generation of
-      ECM, provides:</p>
+      ECM, provides:
+    </p>
     <p> * An intuitive experience, designed for creative users</p>
     <p> * Improved productivity, with the automation and streamlining of routine
-      tasks</p>
+      tasks
+    </p>
     <p> * A trusted repository, designed for secure and easy scaling as projects
-      expand</p>
+      expand
+    </p>
     <p> * Adaptability, with Nuxeo Studio, a configuration and customization
-      environment</p>
+      environment
+    </p>
     <p> * Inter-operability, with a CMIS-enabled platform</p>
 
     <p>Nuxeo DAM new features:</p>
@@ -23,13 +29,15 @@
       <li>
         <p>Bulk Import</p>
         <p>With Nuxeo DAM you can import for large amount of files, with its
-          metadata</p>
+          metadata
+        </p>
       </li>
       <li>
         <p>Video Story-boarding</p>
         <p>Nuxeo DAM automatically generates upon import a series of thumbnails
           that display the contents of a video file. Chapters of the video can
-          be reached by clicking on the thumbnail.</p>
+          be reached by clicking on the thumbnail.
+        </p>
       </li>
       <li>
         <p>Video Streaming</p>
@@ -37,7 +45,8 @@
           video (and soon audio) in streaming, that mean user don't need to wait
           for the end of the download of the file to start to see it. Most used
           video format can uploaded into Nuxeo DAM. Available for Windows
-          servers.</p>
+          servers.
+        </p>
       </li>
       <li>
         <p>Bulk Edit</p>
@@ -47,6 +56,8 @@
   </description>
   <home-page>http://doc.nuxeo.com/x/KQMz</home-page>
   <vendor>Nuxeo</vendor>
+  <installer restart="true" />
+  <uninstaller restart="true" />
   <!-- <hotreload-support>false</hotreload-support> -->
   <!-- <require-terms-and-conditions-acceptance>false -->
   <!-- </require-terms-and-conditions-acceptance> -->
