NXP-7808 - set restart required

--- a/nuxeo-marketplace-dm/src/main/resources/package.xml
+++ b/nuxeo-marketplace-dm/src/main/resources/package.xml
@@ -70,6 +70,8 @@
   </description>
   <home-page>http://doc.nuxeo.com/x/bIEk</home-page>
   <vendor>Nuxeo</vendor>
+  <installer restart="true" />
+  <uninstaller restart="true" />
   <!-- <hotreload-support>false</hotreload-support> -->
   <!-- <require-terms-and-conditions-acceptance>false -->
   <!-- </require-terms-and-conditions-acceptance> -->
