cleanup stax-api deps (fixed xmlbeans groupid)

--- a/nuxeo-core-convert-plugins/pom.xml
+++ b/nuxeo-core-convert-plugins/pom.xml
@@ -77,7 +77,7 @@
       <artifactId>nekohtml</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache</groupId>
+      <groupId>org.apache.xmlbeans</groupId>
       <artifactId>xmlbeans</artifactId>
     </dependency>
     <dependency>
