NXP-7837, NXP-7834, : Use a simple logo for all the platform and the new styles and flavors system + styles fix

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
@@ -3,10 +3,6 @@ color.major.medium=#cfecff
 color.major.strong=#adf
 color.major.stronger=#4e9ae1
 
-color.minor.light=#fff3d4
-color.minor.medium=#ffec86
-color.minor.strong=#ffdf2e
-
 neutral.lighter=#f6f6f6
 neutral.light=#f1f2f3
 neutral.medium=#eeeff0
@@ -19,5 +15,5 @@ button.disabled=#f6f6f6
 info=#fff1c6
 warning=#ffc3a6
 
-header=#332e2e
+header=#000
 footer=#332e2e
