--- a/pom.xml
+++ b/pom.xml
@@ -110,8 +110,8 @@
     <nuxeo.webengine.version>5.5-SNAPSHOT</nuxeo.webengine.version>
     <nuxeo.features.version>5.5-SNAPSHOT</nuxeo.features.version>
 
-    <nuxeo.connect.client.version>1.2</nuxeo.connect.client.version>
-    <nuxeo.distribution.tools.version>1.10.2</nuxeo.distribution.tools.version>
+    <nuxeo.connect.client.version>1.3-SNAPSHOT</nuxeo.connect.client.version>
+    <nuxeo.distribution.tools.version>1.11-SNAPSHOT</nuxeo.distribution.tools.version>
 
     <apacheds.version>1.5.1</apacheds.version>
     <apachedshared.version>0.9.7</apachedshared.version>
