--- a/nuxeo-platform-webapp-core/pom.xml
+++ b/nuxeo-platform-webapp-core/pom.xml
@@ -113,6 +113,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-syndication</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.theme</groupId>
+      <artifactId>nuxeo-theme-styling</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>net.sf.opencsv</groupId>
