--- a/nuxeo-admin-center/nuxeo-admin-center/pom.xml
+++ b/nuxeo-admin-center/nuxeo-admin-center/pom.xml
@@ -61,6 +61,7 @@
     <dependency>
       <groupId>org.nuxeo.connect</groupId>
       <artifactId>nuxeo-connect-client</artifactId>
+      <version>1.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
