--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,11 @@
         <artifactId>nuxeo-platform-importer-core</artifactId>
         <version>${nuxeo.addons.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-importer-jaxrs</artifactId>
+        <version>${nuxeo.addons.version}</version>
+      </dependency>
 
       <!-- Document Routing -->
       <dependency>
