NXP-7837: add an alternative flavor set, fix styles

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/rainbow-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/rainbow-backgrounds.properties
@@ -1,7 +1,7 @@
-color.major.light=#e6f1ff
-color.major.medium=#cfecff
-color.major.strong=#adf
-color.major.stronger=#4e9ae1
+color.major.light=#feffe6
+color.major.medium=#cfffd1
+color.major.strong=#aafff2
+color.major.stronger=#e14e7b
 
 neutral.lighter=#f6f6f6
 neutral.light=#f1f2f3
@@ -20,5 +20,5 @@ subtabs.unselected=#f6f6f6
 info=#fff1c6
 warning=#ffc3a6
 
-header=#000
-footer=#332e2e
+header=#830031
+footer=#690028
