--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/rainbow-borders.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/rainbow-borders.properties
@@ -1,11 +1,11 @@
+color.major.medium=#fffbcf
+color.major.strong=#a9ff70
+color.major.stronger=#e14eb9
+
 neutral.lighter=#e7e7e7
 neutral.light=#c6c6c6
 neutral.medium=#aaa
 neutral.dark=#292929
-
-color.major.medium=#cfecff
-color.major.strong=#70bbff
-color.major.stronger=#4e9ae1
 
 button=#c9c9c9
 button.hover=#aaa
