--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/rainbow-colors.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/rainbow-colors.properties
@@ -5,11 +5,11 @@ gray.medium=#9a9a9a
 gray.dark=#777
 black=#000
 
-title.major=#000
+title.major=#f78600
 title.minor=#6f6f6f
 
-link=#0079a6
-link.hover=#00416b
+link=#00a2cb
+link.hover=#00c1f1
 link.action=#000
 
 link.header=#fff
